--- a/chat/chat.html
+++ b/chat/chat.html
@@ -8,6 +8,19 @@
     <title>NodeJs Chat</title>
 </head>
 <body>
-    
+    <header>
+        <h1>NodeJs Chat</h1>
+        <span id="status">Offline</span>
+    </header>
+
+    <main>
+        <ul id="messages"></ul>
+
+        <form id="form">
+            <label for="message">&gt;</label>
+            <input type="text" id="input" required autofocus autocomplete="off">
+        </form>
+    </main>
+    <script src="./script.js"></script>
 </body>
 </html>
